crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@import_affects_functions.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/import_affects_functions.as
---
initializer:
  actions:
    - ConstantPool:
        - BitmapData
        - flash
        - display
        - beforeImport
        - afterImport
    - DefineFunction:
        name: beforeImport
        params: []
        actions:
          actions:
            - Push:
                - Constant: 0
            - GetVariable
            - Trace
          label_positions: {}
    - DefineFunction:
        name: afterImport
        params: []
        actions:
          actions:
            - Push:
                - Constant: 1
            - GetVariable
            - Push:
                - Constant: 2
            - GetMember
            - Push:
                - Constant: 0
            - GetMember
            - Trace
          label_positions: {}
    - Push:
        - Integer: 0
        - Constant: 3
    - CallFunction
    - Pop
    - Push:
        - Integer: 0
        - Constant: 4
    - CallFunction
    - Pop
  label_positions: {}
extra_modules: []
